stylesheet.css
body {
    max-width: 650px;
    margin: 40px auto;
    padding: 0 10px;
}
h1,
h2,
h3 {
    line-height: 1.2;
}
figure {
    padding: 4px;
    margin: auto;
    text-align: center;
}
figcaption {
    font-style: italic;
    padding: 2px;
    text-align: center;
}
img {
    max-width: 100%;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
div.figureGallery {
    column-count: 2;
    column-width: 285px;
    column-gap: 40px;
}
div.figureGallery img {
    border-radius: 50%;
}
div.tiledBlurb {
    width: 225px;
    height: fit-content;
    border: 5px solid black;
    padding: 10px;
    margin: 10px;
    text-align: left;
}

div.flexColumns {
    display: flex;
    flex-flow: row wrap;
    align-content: start;
    justify-content: space-around;
}

/* TODO fix column image class */

div.equalColumns {
    display: grid;
    gap: 1em;
}

@media (prefers-color-scheme: dark) {
    body {
        color: #c9d1d9;
        background: #0d1117;
    }
    a:link {
        color: #58a6ff;
    }
    a:visited {
        color: #8e96f0;
    }
}
@media (prefers-color-scheme: light) {
    body {
        color: #283618;
        background: #fefae0;
    }
    a:link {
        color: #bc6c25;
    }
    a:visited {
        color: #dda15e;
    }
}

@media (min-width: 650px) {
    div.equalColumns{
        grid-auto-flow: column;
        grid-auto-columns: 1fr;
    }
}
}

